package com.esvarog.ua.Dekanat;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class DekanatApplication {

	public static void main(String[] args) {
		SpringApplication.run(DekanatApplication.class, args);

	}



}
