package com.esvarog.ua.Dekanat.repository;

import com.esvarog.ua.Dekanat.model.table.Blog;
import org.springframework.data.repository.CrudRepository;

public interface Blog_repo extends CrudRepository<Blog, Long> {

}
